Fixed some issues with spacing

--- a/src/components/token/releaseSchedule.scss
+++ b/src/components/token/releaseSchedule.scss
@@ -2,10 +2,6 @@
   padding: 1rem;
   font-size: 1rem;
 
-  h2 {
-    margin: 0;
-  }
-
   .ant-progress-inner:not(.ant-progress-circle-gradient) .ant-progress-circle-path {
     stroke: #FF6366 !important;
   }
